--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="给静态注册的广播发送消息"/>
+
+    <Button
+        android:id="@+id/btn_local_broadcast_send_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="给本地的广播发送消息"/>
 </LinearLayout>
